--- a/output/team.html
+++ b/output/team.html
@@ -69,7 +69,55 @@
     </div>
 
     <div class="uk-flex uk-flex-center uk-flex-wrap">
-        {{ team }}
+        <div class="uk-card uk-card-secondary uk-card-body uk-width-1-2@m manager">
+    <div class="uk-card-badge uk-label">Manager</div>
+    <h3 class="uk-card-title"><span uk-icon="user"></span> Sujith</h3>
+    <ul>
+        <li>ID: 69</li>
+        <li>Email: <a href="mailto:Tes@gmail.com">Tes@gmail.com</a></li>
+        <li>Office number: 69696</li>
+    <ul>
+</div><div class="uk-card uk-card-secondary uk-card-body uk-width-1-2@m engineer">
+    <div class="uk-card-badge uk-label">Engineer</div>
+    <h3 class="uk-card-title"><span uk-icon="server"></span> Rob</h3>
+    <ul>
+        <li>ID: 12</li>
+        <li>Email: <a href="mailto:Rob@hotmail.com">Rob@hotmail.com</a></li>
+        <li>GitHub: <a href="https://github.com/RobGithub" target="_blank" rel="noopener noreferrer">RobGithub</li>
+    <ul>
+</div>,<div class="uk-card uk-card-secondary uk-card-body uk-width-1-2@m engineer">
+    <div class="uk-card-badge uk-label">Engineer</div>
+    <h3 class="uk-card-title"><span uk-icon="server"></span> Sarah</h3>
+    <ul>
+        <li>ID: 90</li>
+        <li>Email: <a href="mailto:Sarah@gmail.com">Sarah@gmail.com</a></li>
+        <li>GitHub: <a href="https://github.com/saraggithub" target="_blank" rel="noopener noreferrer">saraggithub</li>
+    <ul>
+</div><div class="uk-card uk-card-secondary uk-card-body uk-width-1-2@m intern">
+    <div class="uk-card-badge uk-label">Intern</div>
+    <h3 class="uk-card-title"><span uk-icon="bookmark"></span> mike</h3>
+    <ul>
+        <li>ID: 09</li>
+        <li>Email: <a href="mailto:mike.mikey@outlook.com">mike.mikey@outlook.com</a></li>
+        <li>School: monash</li>
+    <ul>
+</div>,<div class="uk-card uk-card-secondary uk-card-body uk-width-1-2@m intern">
+    <div class="uk-card-badge uk-label">Intern</div>
+    <h3 class="uk-card-title"><span uk-icon="bookmark"></span> kylie</h3>
+    <ul>
+        <li>ID: 5</li>
+        <li>Email: <a href="mailto:k.k.y@gmail.com">k.k.y@gmail.com</a></li>
+        <li>School: deakin</li>
+    <ul>
+</div>,<div class="uk-card uk-card-secondary uk-card-body uk-width-1-2@m intern">
+    <div class="uk-card-badge uk-label">Intern</div>
+    <h3 class="uk-card-title"><span uk-icon="bookmark"></span> kelly</h3>
+    <ul>
+        <li>ID: 8</li>
+        <li>Email: <a href="mailto:kellyclark@gmail.com">kellyclark@gmail.com</a></li>
+        <li>School: rmit</li>
+    <ul>
+</div>
     </div>
 
     <!-- jQuery  script link -->
