--- a/output/team.html
+++ b/output/team.html
@@ -73,49 +73,49 @@
     <div class="uk-card-badge uk-label">Manager</div>
     <h3 class="uk-card-title"><span uk-icon="user"></span> Sujith</h3>
     <ul>
-        <li>ID: 69</li>
-        <li>Email: <a href="mailto:Tes@gmail.com">Tes@gmail.com</a></li>
-        <li>Office number: 69696</li>
+        <li>ID: 1</li>
+        <li>Email: <a href="mailto:Sujith@test.com">Sujith@test.com</a></li>
+        <li>Office number: 2489054</li>
     <ul>
 </div><div class="uk-card uk-card-secondary uk-card-body uk-width-1-2@m engineer">
     <div class="uk-card-badge uk-label">Engineer</div>
-    <h3 class="uk-card-title"><span uk-icon="server"></span> Rob</h3>
+    <h3 class="uk-card-title"><span uk-icon="server"></span> Kelly</h3>
     <ul>
-        <li>ID: 12</li>
-        <li>Email: <a href="mailto:Rob@hotmail.com">Rob@hotmail.com</a></li>
-        <li>GitHub: <a href="https://github.com/RobGithub" target="_blank" rel="noopener noreferrer">RobGithub</li>
+        <li>ID: 34</li>
+        <li>Email: <a href="mailto:Kelly@test.com">Kelly@test.com</a></li>
+        <li>GitHub: <a href="https://github.com/Kelly-Github" target="_blank" rel="noopener noreferrer">Kelly-Github</li>
     <ul>
 </div>,<div class="uk-card uk-card-secondary uk-card-body uk-width-1-2@m engineer">
     <div class="uk-card-badge uk-label">Engineer</div>
-    <h3 class="uk-card-title"><span uk-icon="server"></span> Sarah</h3>
+    <h3 class="uk-card-title"><span uk-icon="server"></span> Rob</h3>
     <ul>
-        <li>ID: 90</li>
-        <li>Email: <a href="mailto:Sarah@gmail.com">Sarah@gmail.com</a></li>
-        <li>GitHub: <a href="https://github.com/saraggithub" target="_blank" rel="noopener noreferrer">saraggithub</li>
+        <li>ID: 789</li>
+        <li>Email: <a href="mailto:Rob@test.com">Rob@test.com</a></li>
+        <li>GitHub: <a href="https://github.com/Rob-Github" target="_blank" rel="noopener noreferrer">Rob-Github</li>
     <ul>
 </div><div class="uk-card uk-card-secondary uk-card-body uk-width-1-2@m intern">
     <div class="uk-card-badge uk-label">Intern</div>
-    <h3 class="uk-card-title"><span uk-icon="bookmark"></span> mike</h3>
+    <h3 class="uk-card-title"><span uk-icon="bookmark"></span> Aaron</h3>
     <ul>
-        <li>ID: 09</li>
-        <li>Email: <a href="mailto:mike.mikey@outlook.com">mike.mikey@outlook.com</a></li>
-        <li>School: monash</li>
-    <ul>
-</div>,<div class="uk-card uk-card-secondary uk-card-body uk-width-1-2@m intern">
-    <div class="uk-card-badge uk-label">Intern</div>
-    <h3 class="uk-card-title"><span uk-icon="bookmark"></span> kylie</h3>
-    <ul>
-        <li>ID: 5</li>
-        <li>Email: <a href="mailto:k.k.y@gmail.com">k.k.y@gmail.com</a></li>
-        <li>School: deakin</li>
+        <li>ID: 9</li>
+        <li>Email: <a href="mailto:Aaron@test.com">Aaron@test.com</a></li>
+        <li>School: Monash</li>
     <ul>
 </div>,<div class="uk-card uk-card-secondary uk-card-body uk-width-1-2@m intern">
     <div class="uk-card-badge uk-label">Intern</div>
-    <h3 class="uk-card-title"><span uk-icon="bookmark"></span> kelly</h3>
+    <h3 class="uk-card-title"><span uk-icon="bookmark"></span> Sarah</h3>
     <ul>
-        <li>ID: 8</li>
-        <li>Email: <a href="mailto:kellyclark@gmail.com">kellyclark@gmail.com</a></li>
-        <li>School: rmit</li>
+        <li>ID: 4</li>
+        <li>Email: <a href="mailto:sarah@test.com">sarah@test.com</a></li>
+        <li>School: RMIT</li>
+    <ul>
+</div>,<div class="uk-card uk-card-secondary uk-card-body uk-width-1-2@m intern">
+    <div class="uk-card-badge uk-label">Intern</div>
+    <h3 class="uk-card-title"><span uk-icon="bookmark"></span> Jordan</h3>
+    <ul>
+        <li>ID: 6</li>
+        <li>Email: <a href="mailto:jordan@test.com">jordan@test.com</a></li>
+        <li>School: Deakin</li>
     <ul>
 </div>
     </div>
